terminado con santos y pulido

--- a/ejercicio5.html
+++ b/ejercicio5.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <button id="miBoton"> apretame</button>
     <script>
         document.getElementById("miBoton").addEventListener("click", function() {
     alert("apretaste el boton");
