--- a/ejercicio4.html
+++ b/ejercicio4.html
@@ -9,11 +9,11 @@
     <script>
         let i = 1;
     while (i <= 5) {
-    show(i);
+    console.log(i);
     i++;
 }
     for (let i = 1; i <= 5; i++) {
-    show(i);
+    console.log(i);
 }
     </script>
     
